Update onboarding new booking edit Work to make the onboarding information messages uniform. Also, the form list bar was covering the 'complete set up' banner at the top the page. Adjusted the z-index to fix this.

--- a/app/javascript/styles/custom/_public-customer-edit.scss
+++ b/app/javascript/styles/custom/_public-customer-edit.scss
@@ -11,7 +11,7 @@ ul.formline:before {
   left: 29px;
   width: 2px;
   height: 100%;
-  z-index: 400;
+  z-index: 9;
 }
 
 ul.formline > li {
@@ -34,7 +34,7 @@ ul.formline > li:before {
   left: 20px;
   width: 20px;
   height: 20px;
-  z-index: 400;
+  z-index: 9;
 }
 
 .radiocontainer,.checkcontainer {
